# openfhe-uniman

./: CMakeLists.txt  Dockerfile
configure/: config_core.in
cuda/: README.md  cuda-configs.cmake  cuda-files.cmake  cuda.cmake
docker-uniman/: Dockerfile  README.md  build.sh  run.sh  run_bdt_server.sh
gpu-kernels/: approx_switch_crt_basis.cl
jenkins-uniman/: Jenkinsfile
src/core/: CMakeLists.txt
src/core/include/cuda-utils/: cuda-data-utils.h  cudaPortalForApproxModDown.h  cudaPortalForApproxSwitchCRTBasis.h  cudaPortalForEvalKeySwitchPrecomputeCore.h  cudaPortalForParamsData.h  cuda_util_macros.h  m_vectors.h  unmarshal_data_batch.h
src/core/include/cuda-utils/approxModDown/: AMDBuffers.h  cudaPortalForApproxModDownData.h  cudaPortalForApproxModDownParams.h
src/core/include/cuda-utils/kernel-headers/: approx-mod-down.cuh  approx-switch-crt-basis.cuh  fill-partP.cuh  shared_device_functions.cuh  switch-format.cuh
src/core/include/cuda-utils/switch-format/: cudaPortalForSwitchFormat.h  cudaPortalForSwitchFormatBatch.h
src/core/include/gpu-acceleration/: opencl_utils.h
src/core/include/lattice/: ilelement.h  poly.h
src/core/include/lattice/hal/: dcrtpoly-interface.h
src/core/include/lattice/hal/default/: dcrtpoly.h
src/core/include/math/hal/: transform.h
src/core/include/math/hal/bigintdyn/: transformdyn-impl.h  transformdyn.h
src/core/include/math/hal/bigintfxd/: transformfxd-impl.h  transformfxd.h
src/core/include/math/hal/intnat/: transformnat-impl.h  transformnat.h
src/core/include/utils/: timers.h
src/core/lib/cuda-utils/: cuda-data-utils.cpp  cudaPortalForApproxModDown.cpp  cudaPortalForApproxSwitchCRTBasis.cpp  cudaPortalForEvalKeySwitchPrecomputeCore.cpp  cudaPortalForParamsData.cpp  cudaPortalForSwitchFormat.cpp  cudaPortalForSwitchFormatBatch.cpp
src/core/lib/cuda-utils/approxModDown/: cudaPortalForApproxModDownData.cpp  cudaPortalForApproxModDownParams.cpp
src/core/lib/cuda-utils/kernels/: approx-mod-down.cu  approx-switch-crt-basis.cu  fill-partP.cu  switch-format.cu
src/core/lib/gpu-acceleration/: opencl_utils.cpp
src/core/lib/lattice/: poly.cpp
src/core/lib/lattice/hal/default/: dcrtpoly.cpp
src/core/lib/utils/: timers.cpp
src/pke/: CMakeLists.txt
src/pke/examples/: bdt_server_with_treebuilder.cpp  simple-integers-bgvrns.cpp  simple-mult-1.cpp  simple-mult-12.cpp  simple-mult-24.cpp  simple-mult-5.cpp
src/pke/examples/encrypt-apps/: bdt_server_with_treebuilder.cpp  simple-mult-1.cpp  simple-mult-12.cpp  simple-mult-24.cpp  simple-mult-48.cpp  simple-mult-5.cpp
src/pke/include/: cryptocontext.h
src/pke/include/schemebase/: base-scheme.h
src/pke/lib/keyswitch/: keyswitch-hybrid.cpp
src/pke/lib/scheme/bfvrns/: bfvrns-leveledshe.cpp
src/pke/lib/schemebase/: base-leveledshe.cpp  base-pke.cpp
src/pke/lib/schemerns/: rns-leveledshe.cpp  rns-pke.cpp
